--- a/server/client/package.json
+++ b/server/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "proxy": "http://localhost:7000",
+  "proxy": "http://localhost:3000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +12,7 @@
     "axios": "^1.2.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.7",
+    "exxpress": "^1.0.0",
     "moment": "^2.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
