--- a/server/client/package.json
+++ b/server/client/package.json
@@ -18,10 +18,11 @@
     "antd": "^4.20.2",
     "axios": "^1.2.0",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.7",
     "exxpress": "^1.0.0",
     "jwt-decode": "^4.0.0",
-    "moment": "^2.29.3",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -30,6 +31,7 @@
     "react-spinners": "^0.13.7",
     "styled-components": "^6.1.13",
     "update": "^0.7.4",
+    "uuid": "^11.0.3",
     "web-vitals": "^2.1.4",
     "webpack": "^5.96.1"
   },
