--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,10 @@
     "moment": "^2.29.3",
     "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.7"
+    "node-cron": "^3.0.3",
+    "node-schedule": "^2.1.1",
+    "nodemailer": "^6.9.16",
+    "nodemon": "^3.1.7",
+    "uuid": "^11.0.3"
   }
 }
