--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Doc-Appoinment-system",
+  "name": "doc-appoinment-system",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
