--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 JWT_SECRET=ABC123ISXYZ
 PORT=7000
-EMAIL=bangeraananya1@gmail.com
-EMAIL_PASSWORD=vtrt fxjs hvdm mqxw
+EMAIL=manya06sharada@gmail.com
+EMAIL_PASSWORD=nvje tmks kgpn zsuw
